[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ad-ldap"
version = "2.0"
description = "A module for manipulating AD through LDAP."
authors = [
    { name = "Tim Johnson", email = "timjohnson@google.com" },
]
dependencies = [
    "python-ldap",
]
